--- a/css/style.css
+++ b/css/style.css
@@ -36,18 +36,24 @@
    transition: all 0.3s ease-in-out;
    padding: 10px 0px;
    width: 150px;
-   height: -42vh;
+
 }
 
 .banner-button a{
    text-decoration: none;
-   color: white;
+   border: none;
    font-weight: 300;
    letter-spacing: 2px;
    padding: 0 30px;
+
 }
 
 /* card */
+
+.cards-tittle{
+   padding: 60px;
+   text-align: center;
+}
 
 .cards{
    padding: 20px;
@@ -58,11 +64,30 @@
 .card{
    border-radius: 16px;
    margin: 30px;
+   background-color: #F3F3F3;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .card-img-top{
    border-radius: 16px 16px 0 0;
 }
+
+.card-title{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+}
+
+.card-text{
+   text-align: center;
+}
+
+.card-button{
+   background-color: #e01e1e;
+   justify-content: center;
+   display: flex;
+}
+
 
 /* footer */
    footer{
