--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+
+.modal-header{
+   display: flex;
+   flex-direction: column;
+}
+
 /* banner */
 
 .banner-container{
@@ -66,6 +72,7 @@
    margin: 30px;
    background-color: #F3F3F3;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+   padding-bottom: 40px;
 }
 
 .card-img-top{
@@ -83,13 +90,12 @@
 }
 
 .card-button{
-   background-color: #e01e1e;
    justify-content: center;
    display: flex;
 }
 
 
 /* footer */
-   footer{
-      width: 100%;
-   }
+footer{
+   width: 100%;
+}
