--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,7 @@ html{
 
 /* banner */
 
-.banner-container{
-   width: 100%;
-}
+
 
 .banner-img{
    background-attachment: fixed;
@@ -43,40 +41,10 @@ html{
    background-repeat: no-repeat;
    width: 100%;
    background-size: cover;
+   color: white
 }
 
-.bg--banner{
-   width: 100%;
-   justify-content: center;
-   align-items: center;
-}
 
-.img--bg{
-   width: 100%;
-   
-}
-
-.banner-button{
-   background-color: rgb(190, 190, 190);
-   border: 2px solid #e01e1e;
-   border-radius: 16px;
-   font-weight: 700;
-   font-size: 1.2rem;
-   cursor: pointer;
-   transition: all 0.3s ease-in-out;
-   padding: 10px 0px;
-   width: 150px;
-
-}
-
-.banner-button a{
-   text-decoration: none;
-   border: none;
-   font-weight: 300;
-   letter-spacing: 2px;
-   padding: 0 30px;
-
-}
 
 /* card */
 
