--- a/css/style.css
+++ b/css/style.css
@@ -123,5 +123,38 @@ footer{
    font-size: 1.5rem;
    display: flex;
    justify-content: center;
+}
+
+
+/* equipamentos */
+
+.eq-container{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   padding: 20px;
+   
+}
+
+.eq-content{
+   font-size: 1.7rem;
+   width: 450px;
+   text-align: center;
+   padding: 20px;
+   background-color: #F3F3F3;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.eq-video{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   
+}
+
+.eq-video__vid{
+   padding: 20px;
    
 }
