ajuste margem cotacao

--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,13 @@ footer{
    padding: 20px;
    
 }
+
+/* cotacao */
+
+.cotacao-tittle{
+   margin: 30px;
+}
+
+.cotacao-container{
+   margin: 30px;
+}
